# halifax-import

./: halifax-import.cabal  halifax-ledger.cabal
Finance/Halifax/: CSV.hs  Core.hs  Ledger.hs  Main.hs  Options.hs  QIF.hs  Rules.hs  RulesParser.hs  StatementParser.hs  Tests.hs  Utilities.hs
Ledger/Halifax/: Core.hs  Main.hs  Rules.hs  RulesParser.hs  StatementParser.hs  Tests.hs  Utilities.hs
test-data/: Rules.rules  Statement-Page-1.html  Statement-Page-2.html
